Force rails 7.2 and update departure.  Some foreign_key specs passing

--- a/config.yml.erb
+++ b/config.yml.erb
@@ -1,5 +1,5 @@
 username: <%= ENV['PERCONA_DB_USER'] || 'root' %>
-password: <%= ENV['PERCONA_DB_PASSWORD'] || '' %> 
+password: <%= ENV['PERCONA_DB_PASSWORD'] || 'password' %>
 database: <%= ENV['PERCONA_DB_NAME'] || 'departure_test' %> 
 hostname: <%= ENV['PERCONA_DB_HOST'] || 'localhost' %>
 socket: <%= ENV['PERCONA_DB_SOCKET'] || '' %>
